[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprites/Menu bg.png" type="Texture" id=1]
[ext_resource path="res://fonts/Minecraft.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://sprites/Other Menu bg.png" type="Texture" id=4]
[ext_resource path="res://sprites/titlebox.png" type="Texture" id=5]
[ext_resource path="res://fonts/ka1.ttf" type="DynamicFontData" id=6]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0.537255, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0.4, 1 )
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 9
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=9]
resource_name = "blink"
length = 2.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Enter:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=10]
resource_name = "titleSlide"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 140, 12 ), Vector2( 140, 70 ) ]
}

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 90.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Sprite" parent="Main"]
position = Vector2( 160, 90 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Play" type="Button" parent="Main"]
margin_left = 141.749
margin_top = 51.3746
margin_right = 174.749
margin_bottom = 71.3746
theme = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Play"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="Button" parent="Main"]
margin_left = 129.749
margin_top = 73.3746
margin_right = 188.749
margin_bottom = 93.375
theme = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Tutorial"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="Main"]
margin_left = 130.749
margin_top = 94.375
margin_right = 189.749
margin_bottom = 114.375
theme = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Credits"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leaderboards" type="Button" parent="Main"]
margin_left = 119.749
margin_top = 114.375
margin_right = 204.749
margin_bottom = 134.375
theme = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Leaderboards"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -40.8462, 78.4085 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditMenu" type="Sprite" parent="Credits"]
position = Vector2( 160, 90 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="CreditsBack" type="Button" parent="Credits"]
margin_left = 49.6433
margin_top = 33.188
margin_right = 108.643
margin_bottom = 53.188
theme = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Creditts" type="Label" parent="Credits"]
margin_left = 127.749
margin_top = 56.3746
margin_right = 196.749
margin_bottom = 119.375
custom_fonts/font = SubResource( 6 )
text = "Programming:
Axl Ulpindo
Luis Tumimbang

Art Design:
Gregorio Delfin"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -78.0
margin_right = 20.0
margin_bottom = -38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBox" type="Sprite" parent="Control"]
position = Vector2( 22, 0 )
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )

[node name="Title" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -144.0
margin_top = -82.0
margin_right = -48.0
margin_bottom = -41.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 7 )
text = "ROBOT
FACTORY"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enter" type="Label" parent="Control"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -41.5
margin_top = 31.0
margin_right = 43.5
margin_bottom = 39.0
custom_fonts/font = SubResource( 8 )
text = "Press enter to begin"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
anims/blink = SubResource( 9 )
anims/titleSlide = SubResource( 10 )

[node name="MainMusic" type="AudioStreamPlayer" parent="."]
volume_db = -15.0

[connection signal="pressed" from="Main/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Main/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="Main/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Main/Leaderboards" to="." method="_on_Leaderboards_pressed"]
[connection signal="pressed" from="Credits/CreditsBack" to="." method="_on_CreditsBack_pressed"]
